Wed, Apr 12, 2023, 7:53 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -8,7 +8,9 @@
         <title>My Webpage</title>
     </head>
     <body>
-        hello, homepage
+        <nav>
+            <label class="logo">DesignX</label>
+        </nav>
     </body>
 </html>
 
