--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -10,6 +10,12 @@
     <body>
         <nav>
             <label class="logo">DesignX</label>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </nav>
     </body>
 </html>
