--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -11,9 +11,10 @@
         <nav>
             <label class="logo">DesignX</label>
             <ul>
-                <li><a href="#">Home</a></li>
                 <li><a href="#">About Me</a></li>
+                <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
+                <li><a href="#">Resume</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
