--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -11,7 +11,7 @@
         <nav>
             <label class="logo">DesignX</label>
             <ul>
-                <li><a href="#">About Me</a></li>
+                <li><a class="active" href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Resume</a></li>
