Thu, Apr 13, 2023, 5:05 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav>
-            <label class="logo">DesignX</label>
+            <label class="logo">Tarek Sebai</label>
             <ul>
                 <li><a class="active" href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
