Thu, Apr 13, 2023, 5:19 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -11,7 +11,7 @@
         <nav>
             <input type="checkbox" id="check">
             <label for="check">
-                <i class= "fas fa-bars"></i>
+                <i class= "fa-solid fa-bars"></i>
             </label>
             <label class="logo">Tarek Sebai</label>
             <ul>
