Thu, Apr 13, 2023, 5:23 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -9,10 +9,12 @@
     </head>
     <body>
         <nav>
+            
             <input type="checkbox" id="check">
-            <label for="check">
+            <label for="check" class="checkbtn">
                 <i class= "fa-solid fa-bars"></i>
             </label>
+
             <label class="logo">Tarek Sebai</label>
             <ul>
                 <li><a class="active" href="#">About Me</a></li>
