--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -9,13 +9,13 @@
     </head>
     <body>
         <nav>
-            
+
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class= "fa-solid fa-bars"></i>
             </label>
 
-            <label class="logo">Tarek Sebai</label>
+            <label class="logo">Tarek</label>
             <ul>
                 <li><a class="active" href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
