--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -17,7 +17,8 @@
 
             <label class="logo">Tarek</label>
             <ul>
-                <li><a class="active" href="#">About Me</a></li>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Resume</a></li>
