--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -16,12 +16,17 @@
             </label>
 
             <label class="logo">Tarek</label>
-            <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul id="primary-navigation" class=""primary-navigation flex">
+                <li>
+                    <a href="index.html">About Me</a></li>
+                <li>
+                    <a href="skills.html">Skills</a></li>
+                <li>
+                    <a href="projects.html">Projects</a></li>
+                <li>
+                    <a href="#">Resume</a></li>
+                <li>
+                    <a href="#">Contact</a></li>
             </ul>
         </nav>
     </body>
