--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -18,11 +18,11 @@
             <label class="logo">Tarek</label>
             <ul id="primary-navigation" class=""primary-navigation flex">
                 <li>
-                    <a href="index.html">About Me</a></li>
+                    <a href="#">About Me</a></li>
                 <li>
-                    <a href="skills.html">Skills</a></li>
+                    <a href="#">Skills</a></li>
                 <li>
-                    <a href="projects.html">Projects</a></li>
+                    <a href="#">Projects</a></li>
                 <li>
                     <a href="#">Resume</a></li>
                 <li>
