--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -29,6 +29,14 @@
                     <a href="#">Contact</a></li>
             </ul>
         </nav>
+
+        <main>
+            <h1>This is a test</h1>
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
 
