Fri, Apr 14, 2023, 10:23 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -32,7 +32,7 @@
         </nav>
 
         <main>
-            <h1>This is a test</h1>
+            <h1>Tarek Sebai</h1>
         </main>
 
         <footer>
