--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -32,7 +32,7 @@
         </nav>
 
         <main>
-            <h1>Tarek Sebai<span>_</span></h1>
+            <h1>Tarek Sebai<span></span></h1>
         </main>
 
         <footer>
