Fri, Apr 14, 2023, 10:41 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -32,7 +32,7 @@
         </nav>
 
         <main>
-            <h1>Tarek Sebai<span></span></h1>
+            <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
         </main>
 
         <footer>
