Fri, Apr 14, 2023, 11:04 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -33,6 +33,7 @@
 
         <main>
             <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
+            <div>hello, test</div>
         </main>
 
         <footer>
