Fri, Apr 14, 2023, 11:20 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -33,7 +33,27 @@
 
         <main>
             <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
-            <div>hello, test</div>
+            <section id="about-me">
+                <h2>About Me</h2>
+                <p>Hello, I'm Tarek and I'm a web developer.</p>
+            </section>
+
+            <section id="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </section>
+            <section id="projects">
+                <h2>Projects</h2>
+                <ul>
+                    <li><a href="#">Project 1</a></li>
+                    <li><a href="#">Project 2</a></li>
+                    <li><a href="#">Project 3</a></li>
+                </ul>
+            </section>
         </main>
 
         <footer>
