--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -33,7 +33,7 @@
 
         <main>
             <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
-            <img src="7-Edit.jpf">
+            <img alt="Me" src="7-Edit.jpf">
             <section id="about-me">
                 <p></p>
                 <h2>About Me</h2>
