Fri, Apr 14, 2023, 1:36 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -33,7 +33,10 @@
 
         <main>
             <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
-            <img alt="Me" src="30-sebaihi-1.JPG">
+            <div class="profile-image-container">
+                <img alt="Me" src="30-sebaihi-1.JPG">
+            </div>
+
             <section id="about-me">
                 <p></p>
                 <h2>About Me</h2>
