Fri, Apr 14, 2023, 5:58 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -40,7 +40,9 @@
             <section id="about-me">
                 <p></p>
                 <h2>About Me</h2>
-                <p>Hello, I'm Tarek and I'm a web developer.</p>
+                <p>Tarek is a highly motivated individual with a strong passion for innovation and excellence. As a recent graduate from the University of South Florida, he has successfully completed Harvard's CS50 and Intro to Python courses, gaining expertise in programming languages such as Python, Java, C, SQL, HTML, C++, and Swift.
+
+                    With a background in healthcare and a love for technology and problem-solving, Tarek excels in designing efficient software solutions tailored to modern business needs. His dedication to delivering high-quality results and collaborating with diverse teams sets him apart. Tarek is driven to constantly expand his skills and knowledge, making a lasting impact in the STEM field while inspiring those around him to strive for excellence.</p>
             </section>
 
             <section id="skills">
