--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -32,16 +32,18 @@
         </nav>
 
         <main>
-            <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
-            <div class="profile-image-container">
-                <img alt="Me" src="30-sebaihi-1.JPG">
+            <div class="content-container">
+                <div class="profile-image-container">
+                    <img alt="Me" src="30-sebaihi-1.JPG">
+                </div>
             </div>
-
-            <section id="about-me">
-                <p></p>
-                <h2>About Me</h2>
-                <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift. Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
-            </section>
+            <div class="text-container">
+                <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
+                <section id="about-me">
+                    <p></p>
+                    <h2>About Me</h2>
+                    <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift. Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
+                </section>
 
             <section id="skills">
                 <h2>Skills</h2>
