Fri, Apr 14, 2023, 6:32 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -33,12 +33,12 @@
 
         <main>
             <div class="content-container">
-                <div class="profile-image-container">
-                    <img alt="Me" src="30-sebaihi-1.JPG">
-                </div>
 
                 <div class="text-container">
-                    <h1><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
+                    <div class="profile-image-container">
+                        <img alt="Me" src="30-sebaihi-1.JPG">
+                    </div>
+                    <h1 class="name title"><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
                     <section id="about-me">
                         <p></p>
                         <h2>About Me</h2>
