Fri, Apr 14, 2023, 6:36 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -35,7 +35,7 @@
             <div class="content-container">
 
                 <div class="text-container">
-                    <div class="profile-image-container">
+                    <div class="profile-image-container profile-image-container-left">
                         <img alt="Me" src="30-sebaihi-1.JPG">
                     </div>
                     <h1 class="name title"><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
