Fri, Apr 14, 2023, 6:54 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -35,10 +35,12 @@
             <div class="content-container">
 
                 <div class="text-container">
-                    <div class="profile-image-container profile-image-container-left">
-                        <img alt="Me" src="30-sebaihi-1.JPG">
+                    <div class="image-title-container">
+                        <div class="profile-image-container profile-image-container-left">
+                            <img alt="Me" src="30-sebaihi-1.JPG">
+                        </div>
+                        <h1 class="name title"><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
                     </div>
-                    <h1 class="name title"><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
                     <div class="sections-container">
                         <section id="about-me">
                             <p></p>
