Fri, Apr 14, 2023, 7:22 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -38,7 +38,9 @@
                 </div>
 
                 <div class="image-title-container">
+                    <div class="image-container">
                     <img alt="Me" src="30-sebaihi-1.JPG">
+                    </div>
                 </div>
 
                 <div class="about-me-container"">
