Fri, Apr 14, 2023, 7:25 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -37,36 +37,34 @@
                     <h1 class="name title"><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
                 </div>
 
-                <div class="image-title-container">
-                    <div class="image-container">
-                    <img alt="Me" src="30-sebaihi-1.JPG">
+                    <div class="image-title-container">
+                        <img alt="Me" src="30-sebaihi-1.JPG">
                     </div>
-                </div>
 
-                <div class="about-me-container"">
-                    <section id="about-me">
-                        <h2>About Me</h2>
-                        <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift. Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
-                    </section>
-                </div>
+                    <div class="sections-container">
+                        <section id="about-me" class="about-me-container">
+                            <p></p>
+                            <h2>About Me</h2>
+                            <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift. Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
+                        </section>
 
-                    <section id="skills">
-                        <h2>Skills</h2>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                        </ul>
-                    </section>
-                    <section id="projects">
-                        <h2>Projects</h2>
-                        <ul>
-                            <li><a href="#">Project 1</a></li>
-                            <li><a href="#">Project 2</a></li>
-                            <li><a href="#">Project 3</a></li>
-                        </ul>
-                    </section>
-                </div>
+                        <section id="skills">
+                            <h2>Skills</h2>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
+                        </section>
+                        <section id="projects">
+                            <h2>Projects</h2>
+                            <ul>
+                                <li><a href="#">Project 1</a></li>
+                                <li><a href="#">Project 2</a></li>
+                                <li><a href="#">Project 3</a></li>
+                            </ul>
+                        </section>
+                    </div>
 
         </main>
 
