--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -45,7 +45,8 @@
                         <section id="about-me" class="about-me-container">
                             <p></p>
                             <h2>About Me</h2>
-                            <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift. Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
+                            <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift.
+                                Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
                         </section>
 
                         <section id="skills">
