--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -43,8 +43,8 @@
 
                     <div class="sections-container">
                         <section id="about-me" class="about-me-container">
-                            <h2>About Me</h2>
-                            <p id="about"></p>
+                            <h2 id="abtmehdr">About Me</h2>
+                            <p></p>
                             <p>Tarek is a passionate and skilled recent University of South Florida graduate with expertise in programming languages including Python, Java, C, SQL, HTML, C++, and Swift.
                                 <p></p>
                                 Successfully completing Harvard's CS50 and Intro to Python courses, he excels in designing efficient software solutions and thrives in diverse team environments. Tarek continually expands his knowledge, striving to make a lasting impact in the STEM field.</p>
