--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -17,7 +17,7 @@
             </label>
 
             <label class="logo">Tarek</label>
-            <ul id="primary-navigation" class=""primary-navigation flex">
+            <ul id="primary-navigation" class="primary-navigation flex">
                 <li>
                     <a href="#">About Me</a></li>
                 <li>
