Tue, May 16, 2023, 8:40 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -34,7 +34,10 @@
         <main>
 
                 <div class="text-container">
-                    <h1 class="name title"><span class="text">Tarek Sebai</span><span class="cursor"></span></h1>
+                    <h1 class="name title">
+                        <span class="text">Tarek Sebai</span>
+                        <span class="cursor"></span>
+                    </h1>
                 </div>
 
                     <div class="image-title-container">
