--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -56,7 +56,7 @@
                     <div class="sections-container">
                         <section id="skills">
                             <h2>Skills</h2>
-                            <ul>
+                            <ul class="bodies">
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
@@ -64,7 +64,7 @@
                         </section>
                         <section id="projects">
                             <h2>Projects</h2>
-                            <ul>
+                            <ul class="bodies">
                                 <li><a href="#">Project 1</a></li>
                                 <li><a href="#">Project 2</a></li>
                                 <li><a href="#">Project 3</a></li>
