Tue, May 16, 2023, 9:18 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -69,6 +69,12 @@
                             </ul>
                         </section>
                     </div>
+                        <section id="contact">
+                            <h2>Contact Me</h2>
+
+                        </section>
+
+
 
         </main>
 
