--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -19,13 +19,13 @@
             <label class="logo">Tarek</label>
             <ul id="primary-navigation" class="primary-navigation flex">
                 <li>
-                    <a href="#">About Me</a></li>
+                    <a href="#about-me">About Me</a></li>
                 <li>
-                    <a href="#">Skills</a></li>
+                    <a href="#skills">Skills</a></li>
                 <li>
-                    <a href="#">Projects</a></li>
+                    <a href="#projects">Projects</a></li>
                 <li>
-                    <a href="#">Contact</a></li>
+                    <a href="#contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -71,6 +71,7 @@
                     </div>
                         <section id="contact">
                             <h2>Contact Me</h2>
+
 
                         </section>
 
