--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -73,7 +73,7 @@
                             <h2>Contact Me</h2>
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                <input type="email" class="form-control costom-input" id="exampleFormControlInput1" placeholder="name@example.com">
                               </div>
 
                         </section>
