--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -71,10 +71,12 @@
                     </div>
                         <section id="contact">
                             <h2>Contact Me</h2>
-                            <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                                <input type="email" class="form-control costom-input" id="exampleFormControlInput1" placeholder="name@example.com">
-                              </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                                    <input type="email" class="form-control costom-input" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </div>
+                            </div>
 
                         </section>
 
