--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -76,9 +76,11 @@
                                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
                                     <input type="email" class="form-control costom-input" id="exampleFormControlInput1" placeholder="name@example.com">
                                 </div>
+                            </div>
+                            <div class="d-flex justify-content-center">
                                 <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                 </div>
                             </div>
 
