Tue, May 16, 2023, 10:17 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -9,7 +9,11 @@
         <title>My Webpage</title>
 
             <script>
+                document.addEventListener('DOMcontentLoaded', function(){
+                    let input = document.querySelector('button');
+                    input.addEventListener
 
+                })
 
 
             </script>
