Tue, May 16, 2023, 10:20 AM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -10,8 +10,7 @@
 
             <script>
                 document.addEventListener('DOMcontentLoaded', function(){
-                    let input = document.querySelector('button');
-                    input.addEventListener
+                    document.querySelector('button').addEventListener('click')
 
                 })
 
