--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -10,10 +10,13 @@
 
             <script>
                 document.addEventListener('DOMcontentLoaded', function(){
-                    document.querySelector('button').addEventListener('click')
-
-                })
-
+                    document.querySelector('#btotop').addEventListener('click', function(){
+                        window.scrollTo({
+                            top:0,
+                            behavior: 'smooth'
+                        });
+                    });
+                });
 
             </script>
     </head>
@@ -95,7 +98,7 @@
                             </div>
                         </section>
 
-                    <button>Back to Top</button>
+                    <button id="btotop">Back to Top</button>
 
 
 
