--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -9,7 +9,10 @@
         <title>My Webpage</title>
 
             <script>
-                
+
+                 document.addEventListener('DOMContentLoaded', function()
+                    alert('Hello! Welcome to my Website. This is still in development so take everything with a grain of salt. Peace!');
+                    );
 
             </script>
     </head>
