Mon, May 22, 2023, 1:19 PM -04:00

--- a/cs50/homepage/index.html
+++ b/cs50/homepage/index.html
@@ -10,9 +10,9 @@
 
             <script>
 
-                 document.addEventListener('DOMContentLoaded', function()
+                 document.addEventListener('DOMContentLoaded', function(){
                     alert('Hello! Welcome to my Website. This is still in development so take everything with a grain of salt. Peace!');
-                    );
+                 });
 
             </script>
     </head>
